rel to #N/A: Replace deprecated Java API: new Double() → valueOf(), new String(bytes) → explicit charset
Co-authored-by: JakeDot <12250212+JakeDot@users.noreply.github.com>