@@ -713,7 +713,7 @@ public enum StringLib implements JavaFunction {
         int offset = ii - 1;
         for (int i = 0; i < nReturns; i++) {
             char c = s.charAt(offset + i);
-            callFrame.set(i, new Double((double) c));
+            callFrame.set(i, (double) c);
         }
         return nReturns;
     }
@@ -797,7 +797,7 @@ public enum StringLib implements JavaFunction {
             Object[] caps = new String[level];
             for (int i = 0; i < level; i++) {
                 if (capture[i].len == CAP_POSITION) {
-                    caps[i] = new Double(src_init.length() - capture[i].init.length() + 1);
+                    caps[i] = (double) (src_init.length() - capture[i].init.length() + 1);
                 } else {
                     caps[i] = capture[i].init.getString().substring(0, capture[i].len);
                 }
@@ -906,7 +906,7 @@ public enum StringLib implements JavaFunction {
             if (l == CAP_UNFINISHED) {
                 throw new IllegalStateException("unfinished capture");
             } else if (l == CAP_POSITION) {
-                Double res = new Double(ms.src_init.length() - ms.capture[i].init.length() + 1);
+                final Double res = Double.valueOf(ms.src_init.length() - ms.capture[i].init.length() + 1);
                 ms.callFrame.push(res);
                 return res;
             } else {
@@ -983,7 +983,7 @@ public enum StringLib implements JavaFunction {
                 ms.level = 0;
                 if ( ( res = match ( ms, s1, p ) ) != null ) {
                     if ( find ) {
-                        return callFrame.push(new Double(s.length () - s1.length () + 1), new Double(s.length () - res.length ())) +
+                        return callFrame.push((double) (s.length() - s1.length() + 1), (double) (s.length() - res.length())) +
                         pushCaptures( ms, null, null );
                     } else {
                         return pushCaptures( ms, s1, res );
