@@ -1364,7 +1364,7 @@ public class LuaState {
     }
 
     public static Double toDouble(double d) {
-        return new Double(d);
+        return Double.valueOf(d);
     }
 
     public static Double toDouble(long d) {
